// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator should render correctly Multiplication 1`] = `
<Fragment>
  <div>
    The multiplication of 
    1
     and 
    1
     is: 
    1
  </div>
</Fragment>
`;

exports[`Calculator should render correctly Substraction 1`] = `
<Fragment>
  <div>
    The substraction of 
    1
     and 
    1
     is: 
    0
  </div>
</Fragment>
`;

exports[`Calculator should render correctly Sum 1`] = `
<Fragment>
  <div>
    The sum of 
    1
     and 
    1
     is: 
    2
  </div>
</Fragment>
`;
